@startuml crows-foot-erd
title DVLD System - Crow's Foot ERD (Corrected)

skinparam shadowing false
skinparam linetype ortho
skinparam backgroundColor #FFFFFF
skinparam classAttributeIconSize 0
skinparam entity {
  BackgroundColor #F8FAFC
  BorderColor #334155
  FontColor #111827
}

' =======================
' ENTITIES
' =======================

entity "Countries" as Countries {
  * CountryID <<PK>>
  --
  CountryName
}

entity "People" as People {
  * PersonID <<PK>>
  --
  NationalNo
  FirstName
  SecondName
  ThirdName
  LastName
  DateOfBirth
  Gendor
  Address
  Phone
  Email
  NationalityCountryID <<FK>>
  ImagePath
}

entity "Users" as Users {
  * UserID <<PK>>
  --
  PersonID <<FK>>
  UserName
  Password
  IsActive
}

entity "Drivers" as Drivers {
  * DriverID <<PK>>
  --
  PersonID <<FK>>
  CreatedByUserID <<FK>>
  CreatedDate
}

entity "ApplicationTypes" as ApplicationTypes {
  * ApplicationTypeID <<PK>>
  --
  ApplicationTypeTitle
  ApplicationFees
}

entity "Applications" as Applications {
  * ApplicationID <<PK>>
  --
  ApplicantPersonID <<FK>>
  ApplicationDate
  ApplicationTypeID <<FK>>
  ApplicationStatus
  LastStatusDate
  PaidFees
  CreatedByUserID <<FK>>
}

entity "LicenseClasses" as LicenseClasses {
  * LicenseClassID <<PK>>
  --
  ClassName
  ClassDescription
  MinimumAllowedAge
  DefaultValidityLength
  ClassFees
}

entity "LocalDrivingLicenseApplications" as LDLApplications {
  * LocalDrivingLicenseApplicationID <<PK>>
  --
  ApplicationID <<FK>>
  LicenseClassID <<FK>>
}

entity "Licenses" as Licenses {
  * LicenseID <<PK>>
  --
  ApplicationID <<FK>>
  DriverID <<FK>>
  LicenseClassID <<FK>>
  IssueDate
  ExpirationDate
  Notes
  PaidFees
  IsActive
  IssueReason
  CreatedByUserID <<FK>>
}

entity "InternationalLicenses" as InternationalLicenses {
  * InternationalLicenseID <<PK>>
  --
  ApplicationID <<FK>>
  DriverID <<FK>>
  IssuedUsingLocalLicenseID <<FK>>
  IssueDate
  ExpirationDate
  IsActive
  CreatedByUserID <<FK>>
}

entity "DetainedLicenses" as DetainedLicenses {
  * DetainID <<PK>>
  --
  LicenseID <<FK>>
  DetainDate
  FineFees
  CreatedByUserID <<FK>>
  IsReleased
  ReleaseDate
  ReleasedByUserID <<FK>>
  ReleaseApplicationID <<FK>>
}

entity "TestTypes" as TestTypes {
  * TestTypeID <<PK>>
  --
  TestTypeTitle
  TestTypeDescription
  TestTypeFees
}

entity "TestAppointments" as TestAppointments {
  * TestAppointmentID <<PK>>
  --
  TestTypeID <<FK>>
  LocalDrivingLicenseApplicationID <<FK>>
  AppointmentDate
  PaidFees
  CreatedByUserID <<FK>>
  IsLocked
}

entity "Tests" as Tests {
  * TestID <<PK>>
  --
  TestAppointmentID <<FK>>
  TestResult
  Notes
  CreatedByUserID <<FK>>
}

' =======================
' RELATIONSHIPS
' =======================

Countries ||--o{ People : "has"

People ||--o{ Users : "has account"
People ||--o| Drivers : "may be driver"
People ||--o{ Applications : "submits"

Users ||--o{ Drivers : "creates"
Users ||--o{ Applications : "creates"

Users ||--o{ Licenses : "creates"
Users ||--o{ InternationalLicenses : "creates"

Users ||--o{ TestAppointments : "creates"
Users ||--o{ Tests : "creates"

Users ||--o{ DetainedLicenses : "creates"
Users ||--o{ DetainedLicenses : "releases"

ApplicationTypes ||--o{ Applications : "classifies"

Applications ||--o| LocalDrivingLicenseApplications : "specializes"

LicenseClasses ||--o{ LocalDrivingLicenseApplications : "requested class"

Applications ||--o{ Licenses : "issues"

Applications ||--o{ InternationalLicenses : "issues"

Applications ||--o{ DetainedLicenses : "release application"

Drivers ||--|{ Licenses : "holds"

LicenseClasses ||--o{ Licenses : "assigned class"

Drivers ||--o{ InternationalLicenses : "holds"

Licenses ||--o{ InternationalLicenses : "base license"

Licenses ||--o{ DetainedLicenses : "may be detained"

TestTypes ||--o{ TestAppointments : "defines type"

LocalDrivingLicenseApplications ||--o{ TestAppointments : "schedules"

TestAppointments ||--o{ Tests : "results"

@enduml